--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -1,12 +1,15 @@
 @use './settings/colors' as colors;
 @use './settings/fonts' as fonts;
 
+
 body {
-    background-color: colors.$backGroundColorSections;
+    font-size: 16px;
+    color: colors.$textColor;
+    background-color: rgb(67, 67, 186);
 }
 
 .container {
-    margin: 125px auto;
+    margin: 90px auto;
     height: 100%;
     width: 1900px;
     background-color: colors.$ColorWhite;
